--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -15,6 +15,8 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 <ol reversed>
 
 
+<li>Maarif, M.R., Pratama, A.B., Hutahaean, M., Saleh, A.R., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Tweeting Circular Economy: Unveiling Current Discourse Through Natural Language Processing. Sustainable Development, sd.3323, doi:10.1002/sd.3323. 
+ <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1002/sd.3323'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:738O_yMBCRsC'>[GoogleScholar]</a></li>
 <li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2025) FLTrans-Net: Transformer-Based Feature Learning Network for Wheat Head Detection. Computers and Electronics in Agriculture, 229, 109706, https://doi.org/10.1016/j.compag.2024.109706
  <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.compag.2024.109706'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:Tiz5es2fbqcC'>[GoogleScholar]</a></li>
 <li> Ipa, A.S., Roy, P.N., Rony, M.A.T., Raza, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2024) BdSentiLLM: A Novel LLM Approach to Sentiment Analysis of Product Reviews. IEEE Access, 1–1, doi:10.1109/ACCESS.2024.3516826. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2024.3516826'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:WbkHhVStYXYC'>[GoogleScholar]</a></li>
