--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,7 +14,8 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 ### [J] Journal Articles
 <ol reversed>
 
-
+<li>Ahmed, A., Ali, S., Raza, A., Hussain, I., Bilal, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Novel Deep Neural Network Architecture Fusion to Simultaneously Predict Short-Term and Long-Term Energy Consumption. PLoS ONE, 20, e0315668, doi:10.1371/journal.pone.0315668.
+ <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1371/journal.pone.0315668'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:K3LRdlH-MEoC'>[GoogleScholar]</a></li>
 <li>Maarif, M.R., Pratama, A.B., Hutahaean, M., Saleh, A.R., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Tweeting Circular Economy: Unveiling Current Discourse Through Natural Language Processing. Sustainable Development, sd.3323, doi:10.1002/sd.3323. 
  <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1002/sd.3323'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:738O_yMBCRsC'>[GoogleScholar]</a></li>
 <li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2025) FLTrans-Net: Transformer-Based Feature Learning Network for Wheat Head Detection. Computers and Electronics in Agriculture, 229, 109706, https://doi.org/10.1016/j.compag.2024.109706
