--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -9,7 +9,7 @@ title: Team
 <div class="col col--2"><img src="/team/Muhammad_Syafrudin.jpg"/></div>
 
 <div class="col col--10">
-<h3>Muhammad Syafrudin</h3>
+<h3>Muhammad Syafrudin (샤프루딘 교수)</h3>
 <i>Assistant Professor</i>
 <br/>Department of Artificial Intelligence and Data Science, Sejong University, Korea
 <br/>Office: No. 502, Daeyang AI Center, Sejong University
@@ -40,8 +40,9 @@ title: Team
 <div class="col col--2"><img src="/team/ahyun_2023.jpg"/></div>
 <div class="col col--10">
 <h3>이아현 (Ahyun Lee)</h3>
-Research interest: text mining | Email: ahyunclara[at]sju.ac.kr
-<br/>Publications: [First author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#c-conference-proceedings'>C20</a>]
+Research interest: text mining
+<br/>Email: ahyunclara[at]sju.ac.kr
+<br/>Publications: [First author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#c-conference-proceedings#C20'>C20</a>]
 </div>
 </div>
 
@@ -49,13 +50,13 @@ Research interest: text mining | Email: ahyunclara[at]sju.ac.kr
 <div class="col col--2"></div>
 <div class="col col--10">
 <h3>박수진 (Sujin Park)</h3>
-Research interest: machine learning | Email: sujin76[at]sju.ac.kr
-<br/>Publications: [Co-author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#c-conference-proceedings'>C20</a>]
+Research interest: machine learning 
+<br/>Email: sujin76[at]sju.ac.kr
+<br/>Publications: [Co-author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#c-conference-proceedings#C20'>C20</a>]
 </div>
 </div>
 <i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다. If you are interested in participating as an undergraduate intern, please feel free to contact me at any time. You will have the opportunity to conduct your own research project, and I would be delighted to mentor you throughout your learning journey. Previously, we have assisted other students in presenting research papers based on projects, and we would like to support you in similar endeavors.</i>
-<br/><br/><br/>
-
+<br/><br/>
 
 ### <highlight  color="#0184c6">Master/PhD</highlight>
 
@@ -64,11 +65,9 @@ Research interest: machine learning | Email: sujin76[at]sju.ac.kr
 <i>For detailed information on the admissions procedure, requirements, and scholarships, please refer to the following link: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
 <br/><br/>
 
+### <highlight  color="#980606">AINTLab Researcher</highlight>
 
-### <highlight  color="#0184c6">AINTLab Researcher</highlight>
-
-<br/>TBD.
-
+TBD.
 <br/><br/>
 
 ### <highlight  color="#980606">Research Collaborator</highlight>
