--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -91,7 +91,7 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 <li>Asrol, M., Napthaleni, Utama, D.N., Suharjito, Harito, C., <b>Syafrudin, M.</b> (2024) A Hybrid Inference Engine to Predict Uncertain Sugar Content for Sugar Industry. Procedia Computer Science, 245, 480–489, https://doi.org/10.1016/j.procs.2024.10.274 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.procs.2024.10.274'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:p2g8aNsByqUC'>[GoogleScholar]</a></li>
 <li>Asrol, M., Wahyudi, S., Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
 <li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
-<li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT60104.2023.10391550'>[GoogleScholar]</a></li>
+<li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6., DOI:10.1109/3ICT60104.2023.10391550 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT60104.2023.10391550'>[GoogleScholar]</a></li>
 <li>Sugiantoro, B., Humam, A. I., Fitriyani, N. L., Alfian, G., Maarif, M. R., & <b>Syafrudin, M.</b> (2023). Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE), 121–126, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICITACEE58587.2023.10277046'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICITACEE58587.2023.10277046'>[GoogleScholar]</a></li>
 <li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT), IEEE: Sakheer, Bahrain, November 20 2022, pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT56508.2022.9990708'>[GoogleScholar]</a></li>
 <li>Fitriyani, N. L., <b>Syafrudin, M.</b>, Alfian, G., Yang, C. K., Rhee, J., & Ulyah, S. M. Chronic Disease Prediction Model Using Integration of DBSCAN, SMOTE-ENN, and Random Forest. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 289-294). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888806'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICETSIS55481.2022.9888806'>[GoogleScholar]</a></li>
