--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -42,7 +42,7 @@ title: Team
 <h3>이아현 (Ahyun Lee)</h3>
 Research interest: text mining
 <br/>Email: ahyunclara[at]sju.ac.kr
-<br/>Publications: [First author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#c-conference-proceedings#C20'>C20</a>]
+<br/>Publications: [First author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 </div>
 </div>
 
@@ -52,7 +52,7 @@ Research interest: text mining
 <h3>박수진 (Sujin Park)</h3>
 Research interest: machine learning 
 <br/>Email: sujin76[at]sju.ac.kr
-<br/>Publications: [Co-author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#c-conference-proceedings#C20'>C20</a>]
+<br/>Publications: [Co-author, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 </div>
 </div>
 <i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다. If you are interested in participating as an undergraduate intern, please feel free to contact me at any time. You will have the opportunity to conduct your own research project, and I would be delighted to mentor you throughout your learning journey. Previously, we have assisted other students in presenting research papers based on projects, and we would like to support you in similar endeavors.</i>
