--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,6 +14,9 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 ### [J] Journal Articles
 <ol reversed>
 
+
+<li>Butt, N., Iqbal, M.M., Ramzan, S., Raza, A., Abualigah, L., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Citrus Diseases Detection Using Innovative Deep Learning Approach and Hybrid Meta-Heuristic. PLoS ONE, 20, e0316081, doi:10.1371/journal.pone.0316081.
+ <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1371/journal.pone.0316081'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:l7t_Zn2s7bgC'>[GoogleScholar]</a></li>
 <li>Ahmed, A., Ali, S., Raza, A., Hussain, I., Bilal, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Novel Deep Neural Network Architecture Fusion to Simultaneously Predict Short-Term and Long-Term Energy Consumption. PLoS ONE, 20, e0315668, doi:10.1371/journal.pone.0315668.
  <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1371/journal.pone.0315668'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:K3LRdlH-MEoC'>[GoogleScholar]</a></li>
 <li>Maarif, M.R., Pratama, A.B., Hutahaean, M., Saleh, A.R., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Tweeting Circular Economy: Unveiling Current Discourse Through Natural Language Processing. Sustainable Development, sd.3323, doi:10.1002/sd.3323. 
