--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -59,11 +59,9 @@ Research interest: machine learning
 <br/><br/>
 
 ### <highlight  color="#0184c6">Master/PhD</highlight>
-
-<b>We currently do not have any research assistant scholarships available. Please refrain from contacting me if you do not have other funding for your studies.</b>
 <br/>
 <i>For detailed information on the admissions procedure, requirements, and scholarships, please refer to the following link: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
-<br/><br/>
+<br/>Beasiswa LPDP Indonesia: https://aintlab.com/updates/2025/01/17/Kabar-Baik-untuk-Para-Pejuang-Beasiswa-Afirmasi-LPDP<br/>
 
 ### <highlight  color="#980606">AINTLab Researcher</highlight>
 
