--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -61,11 +61,12 @@ Research interest: machine learning
 ### <highlight  color="#0184c6">Master/PhD</highlight>
 <br/>
 <i>For detailed information on the admissions procedure, requirements, and scholarships, please refer to the following link: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
-<br/>Beasiswa LPDP Indonesia: https://aintlab.com/updates/2025/01/17/Kabar-Baik-untuk-Para-Pejuang-Beasiswa-Afirmasi-LPDP<br/>
+<br/><br/>Informasi Beasiswa LPDP Indonesia: <a href="https://s.aintlab.com/LPDP-SJU-2025" target="_blank">https://s.aintlab.com/LPDP-SJU-2025</a><br/>
+<br/>
 
 ### <highlight  color="#980606">AINTLab Researcher</highlight>
 
-TBD.
+<i>TBD.</i>
 <br/><br/>
 
 ### <highlight  color="#980606">Research Collaborator</highlight>
