--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -6,16 +6,15 @@ title: Alumni
 
 ### <highlight  color="#04be58">Undergraduate/Graduate Students/AINTLab Researchers</highlight>
 
-<h3>이아현 (Ahyun Lee)</h3>
+이아현 (Ahyun Lee)
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
-
-<h3>박수진 (Sujin Park)</h3>
+박수진 (Sujin Park)
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
-
+<br/>
 ### <highlight  color="#0184c6">Visiting Researchers/Professors</highlight>
-<h3>Muhammad Rifqi Maarif</h3> | <i>Universitas Tidar, Indonesia</i>
+Muhammad Rifqi Maarif, <i>Universitas Tidar, Indonesia</i>
 <br/>Publications: 
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.3390/app13010037'>J26</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.3390/info14050265'>J32</a>],
@@ -23,16 +22,17 @@ title: Alumni
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.1002/sd.3323'>J61</a>]
 <br/>
-<h3>Ibrahim Nawawi</h3> | <i>Universitas Tidar, Indonesia</i>
+Ibrahim Nawawi, <i>Universitas Tidar, Indonesia</i>
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
-<h3>Kurnia Fahmy Ilmawan</h3> | <i>Universitas Tidar, Indonesia</i>
+Kurnia Fahmy Ilmawan, <i>Universitas Tidar, Indonesia</i>
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
-<h3>Aries Susanty</h3> | <i>Universitas Diponegoro, Indonesia</i>
+Aries Susanty, <i>Universitas Diponegoro, Indonesia</i>
 <br/>Publications: [Under-review]
 <br/>
 
+<br/>
 ### <highlight  color="#980606">Research Collaborator</highlight>
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
