--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -5,16 +5,18 @@ title: Alumni
 # Alumni
 
 ### <highlight  color="#04be58">Undergraduate/Graduate Students/AINTLab Researchers</highlight>
+<br/>
+<b>이아현 (Ahyun Lee)</b>
+<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
+<br/>
+<b>박수진 (Sujin Park)</b>
+<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
+<br/>
+<br/>
 
-이아현 (Ahyun Lee)
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
-<br/>
-박수진 (Sujin Park)
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
-<br/>
-<br/>
 ### <highlight  color="#0184c6">Visiting Researchers/Professors</highlight>
-Muhammad Rifqi Maarif, <i>Universitas Tidar, Indonesia</i>
+<br/>
+<b>Muhammad Rifqi Maarif</b>, <i>Universitas Tidar, Indonesia</i>
 <br/>Publications: 
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.3390/app13010037'>J26</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.3390/info14050265'>J32</a>],
@@ -22,18 +24,20 @@ Muhammad Rifqi Maarif, <i>Universitas Tidar, Indonesia</i>
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.1002/sd.3323'>J61</a>]
 <br/>
-Ibrahim Nawawi, <i>Universitas Tidar, Indonesia</i>
+<b>Ibrahim Nawawi</b>, <i>Universitas Tidar, Indonesia</i>
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
-Kurnia Fahmy Ilmawan, <i>Universitas Tidar, Indonesia</i>
+<b>Kurnia Fahmy Ilmawan</b>, <i>Universitas Tidar, Indonesia</i>
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
-Aries Susanty, <i>Universitas Diponegoro, Indonesia</i>
+<b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i>
 <br/>Publications: [Under-review]
 <br/>
 
 <br/>
+
 ### <highlight  color="#980606">Research Collaborator</highlight>
+<br/>
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
 <img src="/team/collaboration_map.png"/>
