--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -6,10 +6,10 @@ title: Alumni
 
 ### <highlight  color="#04be58">Undergraduate/Graduate Students/AINTLab Researchers</highlight>
 <br/>
-<b>이아현 (Ahyun Lee)</b>
+<b>이아현 (Ahyun Lee)</b>, <i>Undergraduate</i>
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
-<b>박수진 (Sujin Park)</b>
+<b>박수진 (Sujin Park)</b>, <i>Undergraduate</i>
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
 <br/>
