--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -4,40 +4,34 @@ title: Alumni
 
 # Alumni
 
-### <highlight  color="#04be58">Undergraduate/Graduate Students/AINTLab Researchers</highlight>
+### <highlight  color="#04be58">Undergraduate/Graduate/AINTLab Researchers</highlight>
+
+<b>이아현 (Ahyun Lee)</b>, <i>Undergraduate</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
-<b>이아현 (Ahyun Lee)</b>, <i>Undergraduate</i>
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
-<br/>
-<b>박수진 (Sujin Park)</b>, <i>Undergraduate</i>
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
+<b>박수진 (Sujin Park)</b>, <i>Undergraduate</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
 <br/>
 
 ### <highlight  color="#0184c6">Visiting Researchers/Professors</highlight>
-<br/>
-<b>Muhammad Rifqi Maarif</b>, <i>Universitas Tidar, Indonesia</i>
-<br/>Publications: 
+
+<b>Muhammad Rifqi Maarif</b>, <i>Universitas Tidar, Indonesia</i> | Publications: 
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.3390/app13010037'>J26</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.3390/info14050265'>J32</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/su16010172'>J38</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.1002/sd.3323'>J61</a>]
 <br/>
-<b>Ibrahim Nawawi</b>, <i>Universitas Tidar, Indonesia</i>
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
+<b>Ibrahim Nawawi</b>, <i>Universitas Tidar, Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
-<b>Kurnia Fahmy Ilmawan</b>, <i>Universitas Tidar, Indonesia</i>
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
+<b>Kurnia Fahmy Ilmawan</b>, <i>Universitas Tidar, Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
-<b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i>
-<br/>Publications: [Under-review]
+<b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i> | Publications: [Under-review]
 <br/>
 
 <br/>
 
 ### <highlight  color="#980606">Research Collaborator</highlight>
-<br/>
+
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
 <img src="/team/collaboration_map.png"/>
