--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -10,6 +10,9 @@ title: Alumni
 <br/>
 <b>박수진 (Sujin Park)</b>, <i>Undergraduate</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
+<b>Samia Nawaz Yousafzai</b>, <i>AINTLab Researcher</i> | Publications: 
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math12203294'>J54</a>],
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1016/j.compag.2024.109706'>J60</a>],<br/>
 <br/>
 
 ### <highlight  color="#0184c6">Visiting Researchers/Professors</highlight>
@@ -30,7 +33,7 @@ title: Alumni
 
 <br/>
 
-### <highlight  color="#980606">Research Collaborator</highlight>
+### <highlight  color="#980606">Research Collaborator Network Map</highlight>
 
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
