--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -12,7 +12,8 @@ title: Alumni
 <br/>
 <b>Samia Nawaz Yousafzai</b>, <i>AINTLab Researcher</i> | Publications: 
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math12203294'>J54</a>],
-[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1016/j.compag.2024.109706'>J60</a>],<br/>
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1016/j.compag.2024.109706'>J60</a>]
+<br/>
 <br/>
 
 ### <highlight  color="#0184c6">Visiting Researchers/Professors</highlight>
