--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -34,7 +34,7 @@ title: Alumni
 
 <br/>
 
-### <highlight  color="#980606">Research Collaborator Network Map</highlight>
+### <highlight  color="#980606">Collaborator Network Map</highlight>
 
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
