--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -31,6 +31,8 @@ title: Alumni
 <br/>
 <b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i> | Publications: [Under-review]
 <br/>
+<b>Taufiq Asyhari</b>, <i>Monash University, Indonesia</i>
+<br/>
 
 <br/>
 
