New teams and publication

--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -15,6 +15,7 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 <ol reversed>
 
 
+<li>Toor, M.S., Shahbaz, H., Yasin, M., Ali, A., Fitriyani, N.L., Kim, C., <b>Syafrudin, M.*</b> (2025) An Optimized Weighted-Voting-Based Ensemble Learning Approach for Fake News Classification. Mathematics, 13, 449. https://doi.org/10.3390/math13030449 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math13030449'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
 <li>Butt, N., Iqbal, M.M., Ramzan, S., Raza, A., Abualigah, L., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Citrus Diseases Detection Using Innovative Deep Learning Approach and Hybrid Meta-Heuristic. PLoS ONE, 20, e0316081, doi:10.1371/journal.pone.0316081.
  <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1371/journal.pone.0316081'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:l7t_Zn2s7bgC'>[GoogleScholar]</a></li>
 <li>Ahmed, A., Ali, S., Raza, A., Hussain, I., Bilal, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Novel Deep Neural Network Architecture Fusion to Simultaneously Predict Short-Term and Long-Term Energy Consumption. PLoS ONE, 20, e0315668, doi:10.1371/journal.pone.0315668.
