--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -66,7 +66,36 @@ Research interest: machine learning
 
 ### <highlight  color="#980606">AINTLab Researcher</highlight>
 
-<i>TBD.</i>
+<div class="row">
+<div class="col col--2"><img src="/team/ArmughanAli_2025.jpg"/></div>
+<div class="col col--10">
+<h3>Armughan Ali</h3>
+Research interest: Medical Imaging, NLP, Agriculture, Sustainable IT
+<br/>Email: armughan[at]aintlab.com
+<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+</div>
+</div>
+
+<div class="row">
+<div class="col col--2"><img src="/team/HOORIASHAHBAZ_2025.jpg"/></div>
+<div class="col col--10">
+<h3>Hooria Shahbaz</h3>
+Research interest: Medical Imaging, NLP, Explainable AI, Deep Learning
+<br/>Email: hooria[at]aintlab.com
+<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+</div>
+</div>
+
+<div class="row">
+<div class="col col--2"><img src="/team/MuhammadShahzaibToor_2025.jpg"/></div>
+<div class="col col--10">
+<h3>Muhammad Shahzaib Toor</h3>
+Research interest: Machine learning, cyber security
+<br/>Email: toor[at]aintlab.com
+<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+</div>
+</div>
+
 <br/><br/>
 
 ### <highlight  color="#980606">Research Collaborator</highlight>
