--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -10,6 +10,9 @@ title: Alumni
 <br/>
 <b>박수진 (Sujin Park)</b>, <i>Undergraduate</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 <br/>
+<b>Fatama Tuz Johora</b>, <i>AINTLab Researcher</i> | Publications: 
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math12223515'>J56</a>]
+<br/>
 <b>Samia Nawaz Yousafzai</b>, <i>AINTLab Researcher</i> | Publications: 
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math12203294'>J54</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1016/j.compag.2024.109706'>J60</a>]
