--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -9,12 +9,8 @@ title: Publications
 The output of our research and projects has been presented and published in many outlets, including local and international conferences as well as reputable international peer-reviewed journals. For a comprehensive and up-to-date list of publications, please refer to the following links.
 
 <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a></highlight> - <highlight color="#FFC6A5"><a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a></highlight> - <highlight color="#f5f5f5"><a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?hl=en&user=WLTzkOMAAAAJ&view_op=list_works&sortby=pubdate'>[GoogleScholar]</a></highlight> 
-
-<highlight  color="#1877F2"><i>Note: </i></highlight><a href="#j-journal-articles">J = journal</a>, <a href="#c-conference-proceedings">C = conference</a>, <a href="#b-books--chapters">B = book/chapter</a>, and * = corresponding author.
+<br/><a href="#j-journal-articles">J = journal</a>, <a href="#c-conference-proceedings">C = conference</a>, <a href="#b-books--chapters">B = book/chapter</a>, and * = corresponding author.
 :::
-
-<br/>
-<br/>
 
 ### [J] Journal Articles
 <ol reversed>
@@ -131,5 +127,7 @@ The output of our research and projects has been presented and published in many
 </ol>
 
 
+:::note
 
-*Note: Science Citation Index Expanded (SCIE), Science Citation Index (SCI), Social Sciences Citation Index (SSCI) Impact Factor (IF), Journal Citation Reports (JCR) is trademark of Web of Science Group - Clarivate. *
+*Science Citation Index Expanded (SCIE), Science Citation Index (SCI), Social Sciences Citation Index (SSCI) Impact Factor (IF), Journal Citation Reports (JCR) is trademark of Web of Science Group - Clarivate. *
+:::
