--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -55,14 +55,18 @@ Research interest: machine learning
 <br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
 </div>
 </div>
-<i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다. If you are interested in participating as an undergraduate intern, please feel free to contact me at any time. You will have the opportunity to conduct your own research project, and I would be delighted to mentor you throughout your learning journey. Previously, we have assisted other students in presenting research papers based on their projects, and we would like to support you in similar endeavors.</i>
-<br/><br/>
+
+:::note 연구 학부인턴
+
+<i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다.</i>
+:::
 
 ### <highlight  color="#0184c6">Master/PhD</highlight>
-<br/>
+
+:::info Admission Information
 <i>For detailed information on the admissions procedure, requirements, and scholarships, please refer to the following link: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
-<br/><br/>Informasi Beasiswa LPDP Indonesia: <a href="https://s.aintlab.com/LPDP-SJU-2025" target="_blank">https://s.aintlab.com/LPDP-SJU-2025</a><br/>
-<br/>
+<br/>Informasi Beasiswa LPDP Indonesia: <a href="https://s.aintlab.com/LPDP-SJU-2025" target="_blank">https://s.aintlab.com/LPDP-SJU-2025</a>
+:::
 
 ### <highlight  color="#980606">AINTLab Researcher</highlight>
 
@@ -106,5 +110,8 @@ Research interest: Machine learning, cyber security
 </a><br/>
 <br/>
 
+:::tip Call for Collaboration
+
 *We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
 *If you are interested in collaborating with us, please send an email to the director.*
+:::
