--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -45,7 +45,9 @@ title: Alumni
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
 <img src="/team/collaboration_map.png"/>
 </a><br/>
-<br/>
+
+:::tip Call for Collaboration
 
 *We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
 *If you are interested in collaborating with us, please send an email to the director.*
+:::
