--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -4,6 +4,10 @@ title: Alumni
 
 # Alumni
 
+:::info Admission Information
+*AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise as undergraduates, graduates, researchers and visiting professors.*
+:::
+
 ### <highlight  color="#04be58">Undergraduate/Graduate/AINTLab Researchers</highlight>
 
 <b>이아현 (Ahyun Lee)</b>, <i>Undergraduate</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
