--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -4,7 +4,7 @@ title: Alumni
 
 # Alumni
 
-:::info Admission Information
+:::info Acknowledgment
 *AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise as undergraduates, graduates, researchers and visiting professors.*
 :::
 
