--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -36,26 +36,6 @@ title: Team
 
 ### <highlight  color="#0184c6">Undergraduate</highlight>
 
-<div class="row">
-<div class="col col--2"><img src="/team/ahyun_2023.jpg"/></div>
-<div class="col col--10">
-<h3>이아현 (Ahyun Lee)</h3>
-Research interest: text mining
-<br/>Email: ahyunclara[at]sju.ac.kr
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
-</div>
-</div>
-
-<div class="row">
-<div class="col col--2"></div>
-<div class="col col--10">
-<h3>박수진 (Sujin Park)</h3>
-Research interest: machine learning 
-<br/>Email: sujin76[at]sju.ac.kr
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=DOI:10.1109/3ICT60104.2023.10391550'>C20</a>]
-</div>
-</div>
-
 :::note 연구 학부인턴
 
 <i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다.</i>
@@ -114,4 +94,10 @@ Research interest: Machine learning, cyber security
 
 *We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
 *If you are interested in collaborating with us, please send an email to the director.*
+:::
+
+# Alumni
+
+:::info Acknowledgment
+*AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise. Please find them <a target='_blank' alt='alumni page' rel='noopener noreferrer' href='https://aintlab.com/alumni'>here.</a>*
 :::
