--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -15,6 +15,7 @@ The output of our research and projects has been presented and published in many
 ### [J] Journal Articles
 <ol reversed>
 
+<li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Malik, D.S., Keshta, I., Fitriyani, N.L., Gu, Y. and <b>Syafrudin, M.*</b> (2025) Multi-Stage Neural Network-based Ensemble Learning Approach for Wheat Leaf Disease Classification. IEEE Access 2025, 13, 30101–30116, doi:10.1109/ACCESS.2025.3541347 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3541347'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:vRqMK49ujn8C>[GoogleScholar]</a></li>
 <li>Toor, M.S., Shahbaz, H., Yasin, M., Ali, A., Fitriyani, N.L., Kim, C., <b>Syafrudin, M.*</b> (2025) An Optimized Weighted-Voting-Based Ensemble Learning Approach for Fake News Classification. Mathematics, 13, 449. https://doi.org/10.3390/math13030449 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math13030449'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:tOudhMTPpwUC'>[GoogleScholar]</a></li>
 <li>Butt, N., Iqbal, M.M., Ramzan, S., Raza, A., Abualigah, L., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Citrus Diseases Detection Using Innovative Deep Learning Approach and Hybrid Meta-Heuristic. PLoS ONE, 20, e0316081, doi:10.1371/journal.pone.0316081.
  <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1371/journal.pone.0316081'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:l7t_Zn2s7bgC'>[GoogleScholar]</a></li>
