--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -36,17 +36,20 @@ title: Team
 
 ### <highlight  color="#0184c6">Undergraduate</highlight>
 
-:::note 연구 학부인턴
 
+:::note 연구 학부인턴
 <i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다.</i>
 :::
 
+
 ### <highlight  color="#0184c6">Master/PhD</highlight>
+
 
 :::info Admission Information
 <i>For detailed information on the admissions procedure, requirements, and scholarships, please refer to the following link: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
 <br/>Informasi Beasiswa LPDP Indonesia: <a href="https://s.aintlab.com/LPDP-SJU-2025" target="_blank">https://s.aintlab.com/LPDP-SJU-2025</a>
 :::
+
 
 ### <highlight  color="#980606">AINTLab Researcher</highlight>
 
@@ -82,6 +85,13 @@ Research interest: Machine learning, cyber security
 
 <br/><br/>
 
+### <highlight  color="#04be58">Alumni</highlight>
+
+:::info Acknowledgment
+*AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise. Please find them <a target='_blank' alt='alumni page' rel='noopener noreferrer' href='https://aintlab.com/alumni'>here.</a>*
+:::
+
+
 ### <highlight  color="#980606">Research Collaborator</highlight>
 
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
@@ -94,10 +104,4 @@ Research interest: Machine learning, cyber security
 
 *We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
 *If you are interested in collaborating with us, please send an email to the director.*
-:::
-
-# Alumni
-
-:::info Acknowledgment
-*AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise. Please find them <a target='_blank' alt='alumni page' rel='noopener noreferrer' href='https://aintlab.com/alumni'>here.</a>*
 :::
