--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -121,9 +121,11 @@ The output of our research and projects has been presented and published in many
 
 ### [B] Books / Chapters
 <ol reversed>
+
+<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Artificial Intelligence and Data Science for Sustainability: Applications and Methods, IGI Global: Hershey, PA, 2025; ISBN 9798369368299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-6829-9'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Research Anthology on Business Law, Policy, and Social Responsibility, Management Association, I.R., Ed., IGI Global, 2023, pp. 565–573 ISBN 9798369320457, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-2045-7.ch030'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Advances in E-Business Research, Anshari, M., Syafrudin, M., Alfian, G., Eds., IGI Global, 2023, pp. 35–47 ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/978-1-6684-6097-9.ch003'>[Link]</a></li>
-<li>Metaverse Applications for New Business Models and Disruptive Innovation:, Anshari, M., <b>Syafrudin, M.</b>, Alfian, G., Eds., Advances in E-Business Research, IGI Global, 2023, ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.4018/978-1-6684-6097-9'>[Link]</a></li>
+<li>Anshari, M., <b>Syafrudin, M.</b>, Alfian, G., Eds., Metaverse Applications for New Business Models and Disruptive Innovation, IGI Global, 2023, ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.4018/978-1-6684-6097-9'>[Link]</a></li>
 <li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Syaekhoni, M.A., Rhee, J. Utilizing IoT-Based Sensors and Prediction Model for Health-Care Monitoring System. <i>In Artificial Intelligence and Big Data Analytics for Smart Healthcare</i>, Elsevier, 2021, pp. 63–80 ISBN 978-0-12-822060-3. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/B978-0-12-822060-3.00009-7'>[Link]</a></li>
 </ol>
 
