--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -12,25 +12,20 @@ title: Team
 <h3>Muhammad Syafrudin (샤프루딘 교수)</h3>
 <i>Assistant Professor</i>
 <br/>Department of Artificial Intelligence and Data Science, Sejong University, Korea
-<br/>Office: No. 502, Daeyang AI Center, Sejong University
 <br/>Email: udin[at]sejong.ac.kr (please change [at] with @)
-<br/>Tel.: +82-2-3408-1879
-<br/>ORCID: <a href="https://orcid.org/0000-0002-5640-4413" target="_blank">0000-0002-5640-4413</a>
-<br/><br/>
+<br/>Tel.: +82-2-3408-1879 | ORCID: <a href="https://orcid.org/0000-0002-5640-4413" target="_blank">0000-0002-5640-4413</a>
+<br/>
 <h4>Academic Background</h4>
 <ul>
-<li>Dr.Eng. (Dongguk University, Korea), Feb 2019</li>
-<li>B.Eng. (UIN Sunan Kalijaga, Indonesia), Jun 2013</li>
+<li>Dr.Eng. (Dongguk University, Korea)</li>
+<li>B.Eng. (UIN Sunan Kalijaga, Indonesia)</li>
 </ul>
 
 <h4>Professional Experience</h4>
 <ul>
-<li>Mar 2024 – present: Assistant Professor, Department of Artificial Intelligence and Data Science, Sejong University, Korea</li>
-<li>Mar 2022 – Feb 2024: Assistant Professor, Department of Artificial Intelligence, Sejong University, Korea</li>
-<li>Jan 2023 – present: Chairman, Representative of Indonesian Association of Higher Education in Informatics and Computing (APTIKOM) in Korea, Decree No. KEP. 03/SK/APTIKOM/I/2023</li>
-<li>Mar 2019 – Feb 2022: Assistant Professor, Department of Industrial and Systems Engineering (ISE), Dongguk University, Korea</li>
+<li>Mar 2022 – present: Assistant Professor, Sejong University, Korea</li>
+<li>Mar 2019 – Feb 2022: Assistant Professor, Dongguk University, Korea</li>
 </ul>
-
 </div>
 </div>
 
@@ -83,7 +78,6 @@ Research interest: Machine learning, cyber security
 </div>
 </div>
 
-<br/><br/>
 
 ### <highlight  color="#04be58">Alumni</highlight>
 
