--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -12,8 +12,7 @@ title: Team
 <h3>Muhammad Syafrudin (샤프루딘 교수)</h3>
 <i>Assistant Professor</i>
 <br/>Department of Artificial Intelligence and Data Science, Sejong University, Korea
-<br/>Email: udin[at]sejong.ac.kr (please change [at] with @)
-<br/>Tel.: +82-2-3408-1879 | ORCID: <a href="https://orcid.org/0000-0002-5640-4413" target="_blank">0000-0002-5640-4413</a>
+<br/><a href="/contact">Contact</a> | ORCID: <a href="https://orcid.org/0000-0002-5640-4413" target="_blank">0000-0002-5640-4413</a>
 <br/>
 <h4>Academic Background</h4>
 <ul>
